package fiestaSystem.enums;

public enum PropertyStatus {
    AVAILABLE,
    RESERVED,
    SOLD
}