package fiestaSystem.enums;

public enum TransactionStatus {
    PENDING,
    APPROVED,
    REJECTED
}