package fiestaSystem.enums;

public enum TransactionType {
    RESERVATION,
    PURCHASE
}